--- a/backoffice.html
+++ b/backoffice.html
@@ -26,10 +26,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./index.html">Shop</a>
+                            <a class="nav-link" aria-current="page" href="./index.html">Shop</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./backoffice.html">Back-office</a>
+                            <a class="nav-link active" href="./backoffice.html">Back-office</a>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
