--- a/backoffice.html
+++ b/backoffice.html
@@ -82,31 +82,31 @@
                             <form id="insertKakapo">
                                 <div class="mb-3">
                                     <label for="kakapoName" class="form-label">Kakapo name</label>
-                                    <input type="text" class="form-control" id="kakapoName"
+                                    <input required type="text" class="form-control" id="kakapoName"
                                         aria-describedby="emailHelp">
                                     <div id="emailHelp" class="form-text">Make the name silly, like these gigantonormus
                                         parrots :3 uwu!</div>
                                 </div>
                                 <div class="mb-3">
                                     <label for="kakapoDescription" class="form-label">Kakapo description</label>
-                                    <input type="text" class="form-control" id="kakapoDescription">
+                                    <input required type="text" class="form-control" id="kakapoDescription">
                                 </div>
                                 <div class="mb-3">
                                     <label for="kakapoBrand" class="form-label">Kakapo type</label>
-                                    <input type="text" class="form-control" id="kakapoBrand">
+                                    <input required type="text" class="form-control" id="kakapoBrand">
                                 </div>
                                 <div class="mb-3">
                                     <label for="kakapoImgUrl" class="form-label">Kakapo image URL</label>
-                                    <input type="text" class="form-control" id="kakapoImgUrl">
+                                    <input required type="text" class="form-control" id="kakapoImgUrl">
                                     <div id="kakapoImgUrl" class="form-text">Click away from the input to see the preview! :3</div>
                                 </div>
                                 <div class="mb-3">
                                     <label for="kakapoPrice" class="form-label">Kakapo price</label>
-                                    <input type="number" class="form-control" id="kakapoPrice">
+                                    <input required type="number" class="form-control" id="kakapoPrice">
                                 </div>
                                 <div class="mb-3 form-check">
-                                    <input type="checkbox" class="form-check-input" id="uselessCheckBox" >
-                                    <label class="form-check-label" for="uselessCheckBox">Do you love it?</label>
+                                    <input required type="checkbox" class="form-check-input" id="uselessCheckBox" >
+                                    <label class="form-check-label" for="uselessCheckBox">I love this kakapo!!!</label>
                                 </div>
                                 <button type="submit" id="submitButton" class="btn btn-primary" style="background-color: #b3db72;"></button>
                             </form>
