--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
         <section class="container my-5">
             
-            <div class="d-flex justify-content-center spinner-container">
+            <div id="kakapoWaiter" class="d-flex justify-content-center d-none">
                 <div class="spinner-grow text-success text-center" role="status">
                     <span class="visually-hidden">Loading...</span>
                 </div>
@@ -79,20 +79,6 @@
 
             <div id="shopRow" class="shop row row-cols-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5">
                 
-                <section class="col">
-                    <article class="card">
-                        <img src="https://www.gedistatic.it/content/gnn/img/lastampa/2021/11/25/233847595-f58be656-1dbd-4381-9633-1a65fb39f7c3.jpg"
-                            class="card-img-top" alt="Stressed Kakapo img">
-                        <div class="card-body">
-                            <h2 class="card-title">Stressed Kakapo</h2>
-                            <p class="card-text">Here we have a stressed Kakapo that it did a Epicode exam. After
-                                ventordici hours of code he finally will sleep! 1 like 1 coffe for the kakapo</p>
-                            <a href="./backoffice.html?kakapoId=${}" class="btn btn-primary"
-                                style="background-color: #b3db72;">Details</a>
-                        </div>
-                    </article>
-                </section>
-
             </div>
         </section>
 
