--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
                             </p>
                             <p class="card-text"><small class="text-body-secondary">I'm like a cocò! <i>(hen style
                                         no jutsu)</i></small></p>
+
+                            <a href="./backoffice.html" class="btn btn-success">Hatch a new kakapo!</a>
                         </div>
                     </div>
                     <div class="col-md-5">
@@ -70,7 +72,7 @@
         </section>
 
         <section class="container my-5">
-            
+
             <div id="kakapoWaiter" class="d-flex justify-content-center d-none">
                 <div class="spinner-grow text-success text-center" role="status">
                     <span class="visually-hidden">Loading...</span>
@@ -78,7 +80,7 @@
             </div>
 
             <div id="shopRow" class="shop row row-cols-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5">
-                
+
             </div>
         </section>
 
@@ -94,8 +96,8 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
 
-    <script src="./assets/js/classes.js"></script>
-    <script src="./assets/js/fetches.js"></script>
-    <script src="./assets/js/script.js"></script>
+<script src="./assets/js/classes.js"></script>
+<script src="./assets/js/fetches.js"></script>
+<script src="./assets/js/script.js"></script>
 
 </html>
